# tfm_demo

./: BuildLibmetal.cmake  BuildOpenAMP.cmake  BuildeRPC.cmake  CommonConfig.cmake  ConfigCoreIPC.cmake  ConfigModular.cmake
app/: CMakeLists.txt  main_ns.c
bl2/ext/mcuboot/: CMakeLists.txt  bl2_main.c  flash_map.c  mt25ql.c
cmake/Compiler/: GNUARM.cmake
docs/user_guides/: tfm_build_instruction.rst
interface/include/: tfm_led_api.h  tfm_led_defs.h  tfm_led_svc_handler.h  tfm_led_veneers.h  tfm_ns_svc.h  tfm_sst_defs.h  tfm_sst_veneers.h
interface/src/: tfm_led_api.c  tfm_led_svc_handler.c  tfm_nspm_api.c  tfm_sst_api_ipc.c
interface/src/psa/: psa_client.c  psa_lifecycle.c  psa_service.c
platform/ext/: Mps2AN521.cmake  musca_a.cmake  psoc64.cmake
platform/ext/common/: uart_stdout.c
platform/include/: tfm_plat_defs.h  tfm_plat_mhu.h  tfm_platform_system.h  tfm_spm_hal.h
secure_fw/: CMakeLists.txt
secure_fw/core/: tfm_boot_data.c  tfm_core.c  tfm_core_svcalls_ipc.c  tfm_func_api.c  tfm_nspm.c  tfm_nspm_ipc.c  tfm_spm_services.c
secure_fw/eRPC/: CMakeLists.inc  tfm_erpc.c  tfm_erpc.h
secure_fw/ns_callable/: CMakeLists.inc  tfm_led_veneers.c  tfm_psa_api_veneers.c  tfm_sst_veneers.c
secure_fw/openAMP/: CMakeLists.inc  tfm_openamp.c  tfm_openamp.h
secure_fw/services/: tfm_partition_defs.inc  tfm_partition_list.inc  tfm_service_list.inc  tfm_sfid_list.inc
secure_fw/services/led/: CMakeLists.inc  CMakeLists.txt  led_core.c  led_core.h  manifest.yaml
secure_fw/spm/: spm_db.h
test/framework/: test_framework.c
test/test_services/: CMakeLists.inc
(+51 files in other folders)
